#### Don't forget to change the version number in configure.ac! ####

14 Aug 2003 Cosmetics : Correct HHCTE006A Prompt - Ivan Warren
14 Aug 2003 Fast Devnum & Subchannel lookup algorithm - Ivan Warren
11 Aug 2003 Dequeued IOINT struct off of sysblk.iointq during
            TIO/TSCH to prevent incorrect PCI/Final irpt reordering.
            OS360/MVT Now IPLs correctly.
            All changed marked with "ISW20030812" - Ivan Warren
08 Aug 2003 2.17.b2: fixed incorrectly typed thread functions - Fish
            all thread functions s/b "void *thread(void *arg)", not
            void thread(void *arg) or void *thread() or anything else
08 Aug 2003 Increased 2311 Alt Cyl count from 2 to 3 - Ivan Warren
07 Aug 2003 Codepage extensions (iconv) - Jan Jaeger
05 Aug 2003 Dynamic loadable device support - Jan Jaeger
01 Aug 2003 Created RELEASE.NOTES member - Fish
01 Aug 2003 Added Hercules VERSION to dyngui - Fish
01 Aug 2003 Various OMA tape processing fixes - Ivan Warren
29 Jul 2003 Fix shared device open to not set `connecting' bit on
            until after parameter verification - Greg Smith
26 Jul 2003 Minor change to codepage conversion logic - Jan Jaeger
21 Jul 2003 CVD fix by Viktor Shkamerda - Jan Jaeger
20 Jul 2003 Defer tuntap32 dll load to device alloc - Jan Jaeger
19 Jul 2003 THDER,THDR instructions - Roger Bowler
18 Jul 2003 NLS translation updates - Jan Jaeger
18 Jul 2003 Fix bug in config.c causing segfault on lcs devices - Fish
18 Jul 2003 Fix race conditions in console detach/close - Jan Jaeger
17 Jul 2003 Allow address:port on CNSLPORT statement - Jan Jaeger
17 Jul 2003 make console threads high priority, remove trylock - Fish
17 Jul 2003 logger_init: 1) consistent stdxxx dup'ing,
            2) make logger_thread high priority - Fish
17 Jul 2003 Bugfix: destroy LOCK & COND in cache_destroy - Fish
16 Jul 2003 Allow specifying a native block device as an FBA
            * Linux only, <2Gb Only - Ivan Warren