@@ -47,6 +47,8 @@ static DTEQ dteq[] = {
     { "9347",   "3420" },
     { "9348",   "3420" },
     { "8809",   "3420" },
+    { "3422",   "3420" },
+    { "3430",   "3420" },
 
     { "LCS",    "3088" },
     { "CTCI",   "3088" },
