@@ -354,7 +354,7 @@ The format of the device record is:
         <td><a href="#printer">Line printers</a></td>
         <td>Disk file (ASCII)</td>
     </tr>
-    <tr><td>3410, 3420, 3480<br>3490, 9347</td>
+    <tr><td>3410, 3420, 3480<br>3490, 9347, 8809<br>3422, 3430</td>
         <td><a href="#tapedev">Tape drives</a></td>
         <td>Disk file, CDROM, or SCSI tape</td>
     </tr>
