@@ -1,5 +1,7 @@
 #### Don't forget to change the version number in configure.ac! ####
 
+14 Aug 2003 Updated dasdutil.c for HDL compatibility - Ivan Warren
+14 Aug 2003 Added D/T 3422,3430 to hdteq & tapedev(hdt3420) - Ivan Warren
 14 Aug 2003 Cosmetics : Correct HHCTE006A Prompt - Ivan Warren
 14 Aug 2003 Fast Devnum & Subchannel lookup algorithm - Ivan Warren
 11 Aug 2003 Dequeued IOINT struct off of sysblk.iointq during
